--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,31 @@
-venv/
-
-.env
-
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*.pyo
+.Python
+env/
+venv/
+.venv/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# pytest
+.pytest_cache/
+
+# VSCode
+.vscode/
+
+# IDE
+.idea/
